k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: note-taking-app
  labels:
    name: note-taking-app
